Add core backend, frontend, and Docker setup
Initial commit for CodeCrack platform. Adds backend server, authentication, problem management, code execution engine, submission system, leaderboard, and admin features. Includes frontend pages, navigation, authentication context, and UI improvements. Adds Dockerfiles for language execution, environment configuration, documentation, and utility scripts.

--- a/.env
+++ b/.env
@@ -1,6 +1,44 @@
-# .env is better suited for public variables, ie, variables that should not commited
-# For secret variables is better to use DevServerControl tool with set_env_variable: ["KEY", "SECRET"]
+# =================================
+# CodeCrack Backend Configuration
+# =================================
 
-# https://www.builder.io/c/docs/using-your-api-key
-VITE_PUBLIC_BUILDER_KEY=__BUILDER_PUBLIC_KEY__
-PING_MESSAGE="ping pong"
+# Server Configuration
+NODE_ENV=development
+PORT=8080
+CLIENT_URL=http://localhost:8080
+
+# Database Configuration
+MONGODB_URI=mongodb+srv://vismayasinghbhati:9Cn4Zrgiyp6A176G@codecrack.estl2qq.mongodb.net/?retryWrites=true&w=majority&appName=CodeCrack
+
+# Redis Configuration (for BullMQ) - we'll disable queue for now
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+USE_QUEUE=false
+
+# JWT Configuration
+JWT_SECRET=codecrack_super_secure_jwt_secret_key_change_in_production_2025
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=610259698749-qoohs1d72ph2cqqgms8pktg1mqgbhedp.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:8080/api/auth/google/callback
+
+# Security Configuration
+BCRYPT_ROUNDS=12
+
+# Code Execution Configuration
+CODE_EXECUTION_TIMEOUT=5000
+CODE_EXECUTION_MEMORY_LIMIT=128
+TEMP_DIR=./temp
+
+# Rate Limiting Configuration
+API_RATE_LIMIT=100
+AUTH_RATE_LIMIT=5
+SUBMISSION_RATE_LIMIT=10
+
+# Admin Configuration
+ADMIN_EMAIL=admin@codecrack.com
+ADMIN_PASSWORD=admin123
+
+
