--- a/package.json
+++ b/package.json
@@ -18,11 +18,33 @@
     "start": "node dist/server/node-build.mjs",
     "test": "vitest --run",
     "format.fix": "prettier --write .",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "init-db": "tsx server/scripts/init-db.ts",
+    "build:docker": "cd docker && docker-compose build",
+    "start:services": "cd docker && docker-compose up -d mongodb redis",
+    "stop:services": "cd docker && docker-compose down"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.7.0",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/dockerode": "^3.3.42",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
+    "@types/passport": "^1.0.17",
+    "@types/passport-google-oauth20": "^2.0.16",
+    "bcryptjs": "^3.0.2",
+    "bullmq": "^5.56.9",
+    "dockerode": "^4.0.7",
     "dotenv": "^17.2.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.1",
+    "multer": "^2.0.2",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "redis": "^5.8.0",
+    "uuid": "^11.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -65,6 +87,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/three": "^0.176.0",
+    "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
@@ -77,6 +100,7 @@
     "globals": "^15.9.0",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
+    "mongodb-memory-server": "^10.2.0",
     "next-themes": "^0.3.0",
     "postcss": "^8.5.6",
     "prettier": "^3.5.3",
