Update deployment configuration for codecrack.kshitijsinghbhati.in domain
- Update all environment files to use new domain
- Configure Nginx for single domain setup (frontend + API)
- Update client configuration for production API URL
- Update SSL certificate paths and Google OAuth callback
- Modify deployment scripts and GitHub Actions workflow
- Update deployment documentation for new domain

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -143,7 +143,7 @@ jobs:
     - name: Health Check
       run: |
         sleep 30
-        curl -f https://api.orbittrails.com/health || exit 1
+        curl -f https://codecrack.kshitijsinghbhati.in/health || exit 1
 
     - name: Notify deployment status
       if: always()
