--- a/deployment/.env.production
+++ b/deployment/.env.production
@@ -5,7 +5,7 @@
 # Server Configuration
 NODE_ENV=production
 PORT=3000
-CLIENT_URL=https://orbittrails.com
+CLIENT_URL=https://codecrack.kshitijsinghbhati.in
 
 # Database Configuration
 MONGODB_URI=mongodb://codecrack_admin:${MONGO_ROOT_PASSWORD}@localhost:27017/codecrack?authSource=admin
@@ -22,7 +22,7 @@ JWT_SECRET=${JWT_SECRET}
 # Google OAuth Configuration
 GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
 GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
-GOOGLE_CALLBACK_URL=https://api.orbittrails.com/api/auth/google/callback
+GOOGLE_CALLBACK_URL=https://codecrack.kshitijsinghbhati.in/api/auth/google/callback
 
 # Security Configuration
 BCRYPT_ROUNDS=12
@@ -42,6 +42,6 @@ ADMIN_EMAIL=${ADMIN_EMAIL}
 ADMIN_PASSWORD=${ADMIN_PASSWORD}
 
 # Server specific
-SERVER_HOST=api.orbittrails.com
-SSL_CERT_PATH=/etc/letsencrypt/live/api.orbittrails.com/fullchain.pem
-SSL_KEY_PATH=/etc/letsencrypt/live/api.orbittrails.com/privkey.pem
+SERVER_HOST=codecrack.kshitijsinghbhati.in
+SSL_CERT_PATH=/etc/letsencrypt/live/codecrack.kshitijsinghbhati.in/fullchain.pem
+SSL_KEY_PATH=/etc/letsencrypt/live/codecrack.kshitijsinghbhati.in/privkey.pem
