--- a/deployment/.env.production.template
+++ b/deployment/.env.production.template
@@ -19,7 +19,7 @@ GOOGLE_CLIENT_ID=your-production-google-client-id
 GOOGLE_CLIENT_SECRET=your-production-google-client-secret
 
 # Admin Account
-ADMIN_EMAIL=admin@orbittrails.com
+ADMIN_EMAIL=admin@codecrack.kshitijsinghbhati.in
 ADMIN_PASSWORD=YourSecureAdminPassword2025!
 
 # ============================================
@@ -44,7 +44,7 @@ ADMIN_PASSWORD=YourSecureAdminPassword2025!
 # 3. Update Google OAuth credentials:
 #    - Go to Google Cloud Console
 #    - Create new OAuth 2.0 credentials for production
-#    - Add authorized redirect URI: https://api.orbittrails.com/api/auth/google/callback
+#    - Add authorized redirect URI: https://codecrack.kshitijsinghbhati.in/api/auth/google/callback
 
 # 4. Verify all values are changed from defaults
 
