--- a/deployment/nginx-codecrack.conf
+++ b/deployment/nginx-codecrack.conf
@@ -5,18 +5,18 @@
 # Redirect HTTP to HTTPS
 server {
     listen 80;
-    server_name api.orbittrails.com;
+    server_name codecrack.kshitijsinghbhati.in;
     return 301 https://$server_name$request_uri;
 }
 
 # HTTPS Server Block for API
 server {
     listen 443 ssl http2;
-    server_name api.orbittrails.com;
+    server_name codecrack.kshitijsinghbhati.in;
 
     # SSL Configuration
-    ssl_certificate /etc/letsencrypt/live/api.orbittrails.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/api.orbittrails.com/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/codecrack.kshitijsinghbhati.in/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/codecrack.kshitijsinghbhati.in/privkey.pem;
     
     # SSL Security
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -83,31 +83,9 @@ server {
         access_log off;
     }
 
-    # Logs
-    access_log /var/log/nginx/codecrack_access.log;
-    error_log /var/log/nginx/codecrack_error.log;
-}
-
-# Frontend Server Block (if you want to serve frontend from same domain)
-server {
-    listen 443 ssl http2;
-    server_name orbittrails.com www.orbittrails.com;
-
-    # SSL Configuration (same as above)
-    ssl_certificate /etc/letsencrypt/live/orbittrails.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/orbittrails.com/privkey.pem;
-    
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384;
-    ssl_prefer_server_ciphers off;
-    ssl_session_cache shared:SSL:10m;
-
-    # Document root for frontend
-    root /var/www/codecrack/frontend/dist;
-    index index.html;
-
-    # Frontend routing (SPA)
+    # Frontend routing (SPA) - serve frontend from same domain
     location / {
+        root /var/www/codecrack/frontend/dist;
         try_files $uri $uri/ /index.html;
         
         # Cache static assets
@@ -117,13 +95,7 @@ server {
         }
     }
 
-    # Security headers
-    add_header X-Frame-Options DENY;
-    add_header X-Content-Type-Options nosniff;
-    add_header X-XSS-Protection "1; mode=block";
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
-
     # Logs
-    access_log /var/log/nginx/codecrack_frontend_access.log;
-    error_log /var/log/nginx/codecrack_frontend_error.log;
+    access_log /var/log/nginx/codecrack_access.log;
+    error_log /var/log/nginx/codecrack_error.log;
 }
