Configure ports to avoid conflicts with existing deployment
- Change API server port from 3000 to 3002
- Change MongoDB port from 27017 to 27018
- Change Redis port from 6379 to 6380
- Update Nginx proxy configuration for port 3002
- Update PM2 ecosystem configuration
- Add port conflict checking in deployment script
- Add PORT_CONFIGURATION.md documentation

--- a/deployment/docker-compose.prod.yml
+++ b/deployment/docker-compose.prod.yml
@@ -14,7 +14,7 @@ services:
       - mongodb_data:/data/db
       - ./mongodb-init:/docker-entrypoint-initdb.d
     ports:
-      - "27017:27017"
+      - "27018:27017"  # Changed to avoid conflict with existing MongoDB
     networks:
       - codecrack_network
 
@@ -27,7 +27,7 @@ services:
     volumes:
       - redis_data:/data
     ports:
-      - "6379:6379"
+      - "6380:6379"  # Changed to avoid conflict with existing Redis
     networks:
       - codecrack_network
 
