--- a/deployment/nginx-codecrack.conf
+++ b/deployment/nginx-codecrack.conf
@@ -1,5 +1,24 @@
 # Nginx configuration for CodeCrack
-# Place this file at: /etc/nginx/sites-available/codecrack
+# Place this file at: /etc/    # Auth routes with stricter rate limiting
+    location /api/auth/ {
+        limit_req zone=auth burst=10 nodelay;
+        
+        proxy_pass http://127.0.0.1:3002;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
+    }
+
+    # Health check
+    location /health {
+        proxy_pass http://127.0.0.1:3002/health;
+        access_log off;
+    }e/codecrack
 # Then create symlink: sudo ln -s /etc/nginx/sites-available/codecrack /etc/nginx/sites-enabled/
 
 # Redirect HTTP to HTTPS
@@ -46,7 +65,7 @@ server {
     location /api/ {
         limit_req zone=api burst=20 nodelay;
         
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://127.0.0.1:3002;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
