--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
     "noImplicitAny": false,
     "noFallthroughCasesInSwitch": false,
     "strictNullChecks": false,
+    "noImplicitReturns": false,
+    "noImplicitThis": false,
+    "alwaysStrict": false,
 
     /* Path mapping */
     "baseUrl": ".",
