--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ PORT=8080
 CLIENT_URL=http://localhost:8080
 
 # Database Configuration
-MONGODB_URI=mongodb+srv://vismayasinghbhati:9Cn4Zrgiyp6A176G@codecrack.estl2qq.mongodb.net/?retryWrites=true&w=majority&appName=CodeCrack
+MONGODB_URI=mongodb+srv://vismayasinghbhati:ZqGfyuLsp9YMmPqA@codecrack.estl2qq.mongodb.net/?retryWrites=true&w=majority&appName=CodeCrack
 
 # Redis Configuration (for BullMQ) - we'll disable queue for now
 REDIS_HOST=localhost
